--- a/colorgame.html
+++ b/colorgame.html
@@ -28,11 +28,15 @@
     </div>
 
     <!-- Menu Bar -->
-        <div class="d-flex justify-content-center bg-white">
-            <p class="menutext text-nowrap mr-auto">NEW COLORS</p>
-            <p class="checker text-nowrap"></p>
-            <p class="menutext">EASY</p>
-            <p class="menutext">HARD</p>
+        <div class="row d-flex menubar bg-white">
+            <div class="d-flex col-12">
+                <div class="justify-content-end menutext text-nowrap">NEW COLORS</div>
+                <div class="checker text-nowrap col-6"></div>
+                <div class="d-flex">
+                    <div class="menutext col-6">EASY</div>
+                    <div class="menutext col-6">HARD</div>
+                </div>
+            </div>
         </div>
 
 
