JS - adding functionality for EASY/HARD buttons to change difficulty of the game

--- a/colorgame.html
+++ b/colorgame.html
@@ -30,11 +30,11 @@
     <!-- Menu Bar -->
         <div class="row d-flex menubar bg-white">
             <div class="d-flex col-12">
-                <div class="justify-content-end menutext menuoption text-nowrap">NEW COLORS</div>
+                <div class="justify-content-end menutext menuoption text-nowrap newcolors">NEW COLORS</div>
                 <div class="col-6 checker text-nowrap menutext"></div>
                 <div class="d-flex">
-                    <div class="menutext menuoption col-6">EASY</div>
-                    <div class="menutext menuoption col-6">HARD</div>
+                    <div class="menutext menuoption difficulty col-6">EASY</div>
+                    <div class="menutext menuoption difficulty col-6">HARD</div>
                 </div>
             </div>
         </div>
