--- a/colorgame.html
+++ b/colorgame.html
@@ -28,15 +28,14 @@
     </div>
 
     <!-- Menu Bar -->
-        <div class="row d-flex menubar bg-white">
-            <div class="d-flex col-12">
-                <div class="justify-content-end menutext menuoption text-nowrap newcolors">NEW COLORS</div>
-                <div class="col-6 checker text-nowrap menutext"></div>
-                <div class="d-flex">
-                    <div class="menutext menuoption difficulty col-6">EASY</div>
-                    <div class="menutext menuoption difficulty col-6">HARD</div>
-                </div>
-            </div>
+        <div class="row d-flex justify-content-center menubar bg-white">
+                <div class="menutext menuoption text-nowrap newcolors">NEW COLORS</div>
+                <div class="checker text-nowrap menutext"></div>
+                
+                <div class="menutext menuoption difficulty">EASY</div>
+                <div class="menutext menuoption difficulty">HARD</div>
+
+
         </div>
 
 
