changed html formatting removed text

--- a/index.html
+++ b/index.html
@@ -22,20 +22,17 @@
     
     <!-- Banner -->
     <div class="d-flex flex-column p-0 m-0 banner">
-        <h2 class="text-center text-uppercase text-white text-nowrap m-0">the great</h2>
-        <h1 class="text-center text-uppercase text-white text-nowrap m-0">RGB(255, 255, 255)</h1>
-        <h2 class="text-center text-uppercase text-white mb-0 text-nowrap">color game</h2>
+        <h2 class="colorSelector text-center text-uppercase text-white text-nowrap m-0">
+            RGB(255, 255, 255)
+        </h2>
     </div>
 
     <!-- Menu Bar -->
         <div class="row d-flex justify-content-center menubar bg-white">
                 <div class="menutext menuoption text-nowrap newcolors">NEW COLORS</div>
                 <div class="checker text-nowrap menutext"></div>
-                
                 <div class="menutext menuoption difficulty">EASY</div>
-                <div class="menutext menuoption difficulty">HARD</div>
-
-
+                <div class="menutext menuoption difficulty active">HARD</div>
         </div>
 
 
