adjusting html and ccs for responsiveness

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
 
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <title>Color Game</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,14 +20,14 @@
 <body>
     
     <!-- Banner -->
-    <div class="d-flex flex-column p-0 m-0 banner">
-        <h2 class="colorSelector text-center text-uppercase text-white text-nowrap m-0">
+    <div class="p-0 text-nowrap m-0 banner">
+        <h2 class="colorSelector text-center text-uppercase text-white m-0">
             RGB(255, 255, 255)
         </h2>
     </div>
 
     <!-- Menu Bar -->
-        <div class="row d-flex justify-content-center menubar bg-white">
+        <div class="d-flex justify-content-center menubar bg-white">
                 <div class="menutext menuoption text-nowrap newcolors">NEW COLORS</div>
                 <div class="checker text-nowrap menutext"></div>
                 <div class="menutext menuoption difficulty">EASY</div>
