added condition for new colors to recognize game mode before it generates new colors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     
     <!-- Banner -->
-    <div class="p-0 text-nowrap m-0 banner">
+    <div class="p-0 m-0 banner">
         <h2 class="colorSelector text-center text-uppercase text-white m-0">
             RGB(255, 255, 255)
         </h2>
